# backend/app/models/payment.py
@@ -1,8 +1,9 @@
 from sqlalchemy import Column, Integer, ForeignKey, Float
 from app.core.db import Base
 
+
 class Payment(Base):
-    executor_id = Column(Integer, ForeignKey("user.id"))
-    customer_id = Column(Integer, ForeignKey("user.id"))
-    task_id = Column(Integer, ForeignKey("task.id"))
+    from_user = Column(Integer, ForeignKey("user.id"))
+    to_user = Column(Integer, ForeignKey("user.id"))
+    task_id = Column(Integer, ForeignKey("task.id"), nullable=True)
     value = Column(Float, nullable=False)
